FEAT #2885 clean applet java